# ATLAS-Collision-Data-Analysis

./: .gitignore  CMakeLists.txt  README.md  analyze_collision_data.py  requirements.txt
include/: CollisionEvent.h  DataLoader.h  DataStructure.h  GridBucketing.h  KDTree.h
scripts/: analyze_collision_data.py  parse_data.py
src/: DataLoader.cpp  GridBucketing.cpp  KDTree.cpp  main.cpp
